Добавил ручку получения всех категорий и swagger
