# src/index.ts
@@ -9,6 +9,7 @@ import { authRouter } from './routers/auth-router';
 import swaggerUi from 'swagger-ui-express';
 import * as swaggerDocument from './swagger-output.json';
 import { adminRouter } from './routers/admin-routers';
+import { categoriesRouter } from './routers/categories-router';
 
 dotenv.config();
 
@@ -27,6 +28,7 @@ app.use(cookieParser())
 
 
 app.use('/auth', authRouter)
+app.use('/categories', categoriesRouter)
 app.use('/admin', adminRouter)
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use(errorMiddleware)
